# YT-DLP-Interface

./: .gitignore  ERD.md  README.md  api-connector-README.md  api-connector-music-brainz.py  api-connector-theaudiodb.py  api_connector_music_brainz.py  cookies.txt  database_new.md  database_new.py  database_v2.py  directedit.py  download.py  example-env  main.py  pyproject.toml  test.py  videoInfos.json
api/: __init__.py  api-connector-README.md  api_connector_theaudiodb.py
database/: database.py
editor/: __init__.py  directedit.py
tools/: backward compatibility 01.py  backward compatibility 02.py  backward compatibility 03.py  backward compatibility 03_0_fuzzy_and_no_match.py  backward compatibility 03_1_dataSearialisation.py  backward compatibility 03_2_dbInsert.py  change_db_flag.py  databaseV2-test.py  database_unload.py  db_row_extractor.py  db_url extractor.py  duplicateAudio.py  json_format.py  rows_to_base.py  scancode.py  url_list_download.py
